dz_26.2 add updateview

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,18 @@
 SECRET_KEY=
+
 DB_NAME=
 DB_USER=
 PASSWORD=
 HOST=
 PORT=
+
 STRIPE_API_KEY=
+
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_USE_SSL=
